# loginserver

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt
client/: client.js  index.html  index2.html  rpc.js  styles.css
conf/: captcha.cmd  db.ini  db_auth.ini  login_auth.ini  report.cmd  report2db.cmd  send_email.cmd  server.ini  user_config.conf
conf.local/: .gitignore  captcha.cmd  db_auth.ini  login_auth.ini  send_email.cmd  server.ini
src/google_otp/: CMakeLists.txt  ga.cpp  ga.h  ga_old.cpp
src/server/: CMakeLists.txt  main.cpp  rpcinterface.cpp  rpcinterface.h  user_lock.cpp  user_lock.h  user_services.cpp  user_services.h
src/session/: CMakeLists.txt  session.cpp  session.h
src/token/: CMakeLists.txt  test.cpp  token.cpp  token.h  usertoken.cpp  usertoken.h
web/: default.css  import.html  index.html
web/js/: code.js  dlganim.js  rpc.js  templates.js
